--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizontal Bar Graph</title>
+    <title>Horizontal Bar Graph With Color Coding</title>
     <style>
         .bar-container {
-            margin: 20px;
+            margin: 20px 0;
         }
         .bar {
+            height: 30px; /* Height of each bar */
+            width: 200px; /* Fixed width for all bars */
             display: inline-block;
-            height: 10px; /* Height of each bar */
-            margin-bottom: 10px;
-            background: linear-gradient(to right, red, yellow, green);
+            margin: 5px 0; /* Adjusted margin for vertical spacing */
+            vertical-align: middle; /* Align with the text */
+        }
+        .bar-text {
+            display: inline-block;
+            margin-right: 10px; /* Space between text and bar */
+            vertical-align: middle; /* Align with the bar */
+        }
+        /* Additional styling for clarity */
+        body {
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
 <body>
-    <div id="table-container"></div> <!-- Container to fetch and display the table -->
     
     <div class="bar-container" id="bar-container">
-        <!-- Bars will be dynamically generated here -->
+        <!-- Names and bars will be dynamically generated here -->
     </div>
 
     <script>
@@ -37,27 +46,39 @@
                 .catch(error => console.error('Error fetching table data:', error));
         }
 
-        // Function to generate bars based on data from the HTML table
+        // Function to generate bars and names based on data from the HTML table
         function generateBarsFromTable(table) {
             const rows = table.getElementsByTagName('tr');
-            const bars = document.getElementById('bar-container');
+            const barsContainer = document.getElementById('bar-container');
 
             for (let i = 1; i < rows.length; i++) {
                 const cells = rows[i].getElementsByTagName('td');
+                const name = cells[0].textContent.trim();
                 const value = parseInt(cells[1].textContent.trim());
+
+                const textElement = document.createElement('span');
+                textElement.className = 'bar-text';
+                textElement.textContent = name;
 
                 const bar = document.createElement('div');
                 bar.className = 'bar';
-                bar.style.width = value + '%'; // Adjusting width based on value
+                // Color coding based on value
+                if (value < 50) {
+                    bar.style.backgroundColor = 'red';
+                } else if (value >= 50 && value <= 75) {
+                    bar.style.backgroundColor = 'yellow';
+                } else {
+                    bar.style.backgroundColor = 'green';
+                }
 
-                bars.appendChild(bar);
+                barsContainer.appendChild(textElement);
+                barsContainer.appendChild(bar);
             }
         }
 
         // Call fetchTableData function and generateBarsFromTable function when the page loads
         window.onload = function() {
             fetchTableData(function(table) {
-                document.getElementById('table-container').appendChild(table);
                 generateBarsFromTable(table);
             });
         };
