--- a/hours.html
+++ b/hours.html
@@ -27,16 +27,16 @@
         </thead>
         <tbody>
             <tr>
-                <td>Category 1</td>
-                <td>50</td>
+                <td>Bill</td>
+                <td>30</td>
             </tr>
             <tr>
-                <td>Category 2</td>
-                <td>75</td>
+                <td>Ted</td>
+                <td>47</td>
             </tr>
             <tr>
                 <td>Category 3</td>
-                <td>100</td>
+                <td>28</td>
             </tr>
             <!-- Add more rows as needed -->
         </tbody>
