--- a/hours.html
+++ b/hours.html
@@ -35,7 +35,7 @@
                 <td>47</td>
             </tr>
             <tr>
-                <td>Category 3</td>
+                <td>Steve</td>
                 <td>28</td>
             </tr>
             <!-- Add more rows as needed -->
