--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
         .bar {
             height: 15px; /* Height of each bar */
-            width: 100px; /* Fixed width for all bars */
+            width: 50px; /* Fixed width for all bars */
             display: inline-block;
             margin: 5px 0; /* Adjusted margin for vertical spacing */
             vertical-align: middle; /* Align with the text */
@@ -18,6 +18,7 @@
         .bar-text {
             display: inline-block;
             margin-right: 10px; /* Space between text and bar */
+            margin-left: 10px; /* Space between text and bar */
             vertical-align: middle; /* Align with the bar */
         }
         /* Additional styling for clarity */
