--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Data Display</title>
+    <style>
+        .bar {
+            height: 20px;
+            margin: 5px 0;
+            border-radius: 5px;
+            transition: width 0.5s ease;
+        }
+        .red { background-color: red; }
+        .yellow { background-color: yellow; }
+        .orange { background-color: orange; }
+        .green { background-color: green; }
+    </style>
     <script>
         window.onload = function() {
             const table = document.getElementById('dataTable');
@@ -28,13 +40,32 @@
                 lines.forEach(function(line) {
                     const rowData = line.split(',');
                     const row = document.createElement('tr');
-                    rowData.forEach(function(cellData) {
+                    rowData.forEach(function(cellData, index) {
                         const cell = document.createElement('td');
                         cell.textContent = cellData;
                         row.appendChild(cell);
+                        if (index > 0) { // Skip the first column (assuming it's a label)
+                            const bar = document.createElement('div');
+                            bar.className = 'bar';
+                            bar.style.width = (parseInt(cellData) * 10) + 'px'; // Adjust multiplier as needed
+                            setColorClass(bar, parseInt(cellData));
+                            cell.appendChild(bar);
+                        }
                     });
                     table.appendChild(row);
                 });
+            }
+            
+            function setColorClass(element, value) {
+                if (value < 50) {
+                    element.classList.add('red');
+                } else if (value < 75) {
+                    element.classList.add('yellow');
+                } else if (value < 90) {
+                    element.classList.add('orange');
+                } else {
+                    element.classList.add('green');
+                }
             }
         };
     </script>
