--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <style>
         .bar {
             height: 12px;
-            width: 95px; /* Fixed width for bars */
+            width: 195px; /* Fixed width for bars */
             margin: 5px 0;
             border-radius: 5px;
             transition: width 0.5s ease;
@@ -17,8 +17,8 @@
         .yellow { background-color: yellow; }
         .orange { background-color: orange; }
         .green { background-color: green; }
-        .column1 { width: 150px; }
-        .column2 { width: 100px; }
+        .column1 { width: 200px; }
+        .column2 { width: 200px; }
     </style>
     <script>
         window.onload = function() {
@@ -89,6 +89,7 @@
     </script>
 </head>
 <body>
+    <p>Weekly Performance Gauge:</p>
     <table id="dataTable" border="1"></table>
 </body>
 </html>
