--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <style>
         .bar {
             height: 12px;
-            /*width: 195px;  Fixed width for bars */
+            width: 195px; /* Fixed width for bars */
             margin: 5px 0;
             border-radius: 5px;
             transition: width 0.5s ease;
