--- a/index3.html
+++ b/index3.html
@@ -119,7 +119,8 @@
     </script>
 </head>
 <body>
-    <p>Performance Gauge</p></p>
+    <p>Technician Time Gauge<br>
+    Previous Week - This is still a work in progress!</p>
     <table id="dataTable" border="1"></table>
 </body>
 </html>
