--- a/index3.html
+++ b/index3.html
@@ -19,8 +19,8 @@
             float: left; /* Float segments left */
         }
         .segment1 { width: 50px; background-color: red; }
-        .segment2 { width: 50px; background-color: yellow; }
-        .segment3 { width: 50px; background-color: orange; }
+        .segment2 { width: 50px; background-color: orange; }
+        .segment3 { width: 50px; background-color: gold; }
         .segment4 { width: 50px; background-color: green; }
         .column1 { width: 200px; }
         .column2 { width: 200px; }
