--- a/index3.html
+++ b/index3.html
@@ -122,5 +122,7 @@
     <p>Technician Time Gauge<br>
     Previous Week - This is still a work in progress!</p>
     <table id="dataTable" border="1"></table>
+    <p>RED = 19 hours or less - Orange = 26 hours or less<br>
+    Gold = 32 hours or less - Green = 33 hours or more</p>
 </body>
 </html>
