--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
         .bar {
             height: 15px;
             width: 200px; /* Fixed width for bars */
-            margin: 5px 0;
+            margin: 3px 0;
             border-radius: 5px;
             transition: width 0.5s ease;
             display: inline-block; /* Ensure bars are displayed inline */
@@ -121,7 +121,7 @@
 <body>
     <p>Technician Time Gauge<br>
     Previous Week - This is still a work in progress!</p>
-    <table id="dataTable" border="0.5"></table>
+    <table id="dataTable" border="1" size=".5"></table>
     <p>Red = 19 hours or less - Orange = 26 hours or less<br>
     Gold = 32 hours or less - Green = 33 hours or more</p>
 </body>
