--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Data Display</title>
     <style>
+        {
+            background-color: #9E9C9B; /* Set the desired background color */
+        }
         .bar {
             height: 15px;
             width: 200px; /* Fixed width for bars */
