--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Data Display</title>
     <style>
-        {
+        body{
             background-color: #9E9C9B; /* Set the desired background color */
         }
         .bar {
