--- a/text_rotator.html
+++ b/text_rotator.html
@@ -6,6 +6,7 @@
     <title>Text Rotator</title>
     <style>
         body {
+            background-color: #9E9C9B; /* Set the desired background color */
             display: flex;
             justify-content: center;
             align-items: center;
