--- a/db6.html
+++ b/db6.html
@@ -29,7 +29,7 @@
         <iframe src="https://sawdustguru.github.io/dashboard.github.io/index3.html" frameborder="1"></iframe>
     </div>
     <div class="iframe-container">
-        <iframe src="https://sawdustguru.github.io/dashboard.github.io/text_rotator.html" frameborder="1"></iframe> <!-- Assuming text_rotator.html contains the text rotator -->
+        <iframe src="text_rotator.html" frameborder="1"></iframe> <!-- Assuming text_rotator.html contains the text rotator -->
     </div>
 </body>
 </html>
