--- a/db6.html
+++ b/db6.html
@@ -9,7 +9,7 @@
             width: 50%;
             height: 50vh; /* Adjust the height as needed */
             float: left;
-            /*border: 2px solid black; /* Add black border */
+            border: 2px solid black; /* Add black border */
         }
         iframe {
             width: calc(100% - 4px); /* Adjust width to account for border */
