--- a/db6.html
+++ b/db6.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service Dashboard</title>
     <style>
-        .iframe-container {
+	    body {background-color: black;}
+	    
+	    .iframe-container {
             width: 50%;
             height: 50vh; /* Adjust the height as needed */
             float: left;
