--- a/db6.html
+++ b/db6.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service Dashboard</title>
     <style>
-	    body {background-color: black;}
-	    
-	    .iframe-container {
+	    body {
+		    background-color: black;
+	    }
+	    	    .iframe-container {
             width: 50%;
             height: 50vh; /* Adjust the height as needed */
             float: left;
