--- a/test.html
+++ b/test.html
@@ -1,9 +1,47 @@
-label {
-  padding-right: 10px;
-  font-size: 1rem;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Basic Web Page</title>
+    <style>
+        /* CSS styles can go here */
+        label {
+              padding-right: 10px;
+              font-size: 1rem;
+              }
 
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
 
-<label for="fuel">Fuel level:</label>
+<header>
+    <h1>Welcome to My Basic Web Page</h1>
+</header>
+
+<div class="container">
+   <label for="fuel">Fuel level:</label>
 
 <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="50">at 50/100</meter>
+
+</div>
+
+</body>
+</html>
