--- a/test.html
+++ b/test.html
@@ -35,12 +35,9 @@
 <header>
     <h1>Welcome to My Basic Web Page</h1>
 </header>
-
+<label for="fuel">Hours Per Bay</label>
 <div class="container">
-   <label for="fuel">Fuel level:</label>
-
-<meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="50">at 50/100</meter>
-
+   0 <meter id="fuel" min="0" max="8" low="5.99" high="7" optimum="7.5" value="5.75">at 50/100</meter> 8
 </div>
 
 </body>
