--- a/index4.html
+++ b/index4.html
@@ -171,7 +171,7 @@
 </head>
 <body>
     <p>Technician Time Gauge<br>
-    Previous Week - This is still a work in progress!</p>
+    Previous Week - This is still a work in progress</p>
     <table id="dataTable" border="1" size=".5"></table>
     <p>Red = 19 hours or less - Orange = 26 hours or less<br>
     Gold = 32 hours or less - Green = 33 hours or more</p>
