--- a/index5.html
+++ b/index5.html
@@ -30,11 +30,13 @@
         .column1 { width: 200px; }
         .column2 { width: 200px; }
         .column3 {
-            width: 250px;
-            background: linear-gradient(to right, red, green); /* Gradient from red to green */
+            width: 200px;
+            background: linear-gradient(to right, red 0%, orange 60%, gold 85%, green 100%); /* Gradient from red to green starting at 85% */
             position: relative;
             height: 20px; /* Set height of the gauge */
             display: flex; /* Align content */
+        }
+
         }
         .percentage {
             position: absolute;
