--- a/index5.html
+++ b/index5.html
@@ -68,6 +68,19 @@
         .segment2 { width: 25%; background-color: orange; }
         .segment3 { width: 25%; background-color: gold; }
         .segment4 { width: 25%; background-color: green; }
+                td {
+            vertical-align: middle;
+            text-align: center;
+        }
+        
+        table {
+            border-collapse: collapse;
+        }
+        
+        th, td {
+            border: 1px solid black;
+            padding: 5px;
+        }
     </style>
     <script>
         window.onload = function() {
