--- a/index5.html
+++ b/index5.html
@@ -14,7 +14,7 @@
             margin: 3px 0;
             border-radius: 5px;
             transition: width 0.5s ease;
-            display: inline-block; /* Ensure bars are displayed inline */
+            /*display: inline-block;  Ensure bars are displayed inline */
             overflow: hidden; /* Ensure segments do not overflow */
             position: relative; /* Position for the indicator line */
         }
@@ -70,7 +70,7 @@
         .segment4 { width: 25%; background-color: green; }
                 td {
             vertical-align: middle;
-            text-align: center;
+            text-align: left;
         }
         
         table {
@@ -78,8 +78,8 @@
         }
         
         th, td {
-            border: 1px solid black;
-            padding: 5px;
+            border: 2px solid black;
+            padding: 2px;
         }
     </style>
     <script>
