--- a/index5.html
+++ b/index5.html
@@ -45,7 +45,7 @@
             background: linear-gradient(to right, red 0%, orange 35%, gold 45%, green 85%); /* Gradient from red to green starting at 85% */
             position: relative;
             height: 20px; /* Set height of the gauge */
-            display: flex; /* Align content */
+           /* display: flex;  Align content */
         }
 
         }
