--- a/index5.html
+++ b/index5.html
@@ -227,5 +227,6 @@
     <table id="dataTable" border="1" size=".5"></table>
     <p>Red = 19 hours or less - Orange = 27 hours or less<br>
     Gold = 32 hours or less - Green = more than 33 hours</p>
+    <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
 </body>
 </html>
