--- a/index5.html
+++ b/index5.html
@@ -7,6 +7,7 @@
     <style>
         body{
             background-color: #9E9C9B; /* Set the desired background color */
+            font-family: Arial, sans-serif; /* Set font to Arial with a fallback to sans-serif */
         }
         .bar {
             height: 15px;
@@ -78,6 +79,7 @@
         }
         
         th, td {
+            font-family: Arial, sans-serif; /* Set font to Arial with a fallback to sans-serif */
             border: 2px solid black;
             padding: 2px;
         }
