--- a/index6.html
+++ b/index6.html
@@ -278,8 +278,8 @@
             <div id="averageGauge" class="bar new-gauge">
                 <div class="indicator"></div>
             </div>
-            <div id="averagePercentageDisplay" class="percentage"></div> <!-- Display average percentage here -->
-            <div id="referenceLine" class="reference-line"></div> <!-- Reference line -->
+            <p><div id="averagePercentageDisplay" class="percentage"></div> <!-- Display average percentage here -->
+            <div id="referenceLine" class="reference-line"></div> <!-- Reference line --></p>
         </div>
 
 </body>
