--- a/index6.html
+++ b/index6.html
@@ -19,15 +19,15 @@
             overflow: hidden; /* Ensure segments do not overflow */
             position: relative; /* Position for the indicator line */
         }
-        .indicator {
+       /* .indicator {
             position: absolute;
             top: 0;
             left: 0;
             height: 100%;
             width: 3px; /* Width of the indicator line */
-            background-color: white; /* Color of the indicator line */
-            transform: translateX(-50%); /* Center the line */
-        }
+           /* background-color: white; /* Color of the indicator line */
+            /* transform: translateX(-50%); /* Center the line */
+        
         .black-indicator {
             position: absolute;
             top: 0;
