--- a/index6.html
+++ b/index6.html
@@ -286,7 +286,7 @@
     <p>Average Shop Performance:</p>
     <div id="averageGaugeContainer">
         <div id="averageGauge" class="bar new-gauge">
-            <div class="indicator"></div>
+            <!-- <div class="indicator"></div> -->
         </div>
         <div id="averagePercentageDisplay" class="percentage"></div> <!-- Display average percentage here -->
     </div>
