--- a/index6.html
+++ b/index6.html
@@ -6,9 +6,24 @@
     <title>CSV Data Display</title>
     <style>
         body {
-            background-color: #9E9C9B; /* Set the desired background color */
-            font-family: Arial, sans-serif; /* Set font to Arial with a fallback to sans-serif */
-        }
+                background-color: #9E9C9B; /* Set the desired background color */
+                font-family: Arial, sans-serif; /* Set font to Arial with a fallback to sans-serif */
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+            }
+            
+            .container {
+                max-width: 800px; /* Set max-width for the container */
+                width: 100%; /* Take full width of the viewport */
+                padding: 20px; /* Add padding for spacing */
+                background-color: #ffffff; /* White background for container */
+                border-radius: 10px; /* Add border radius for rounded corners */
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow effect */
+            }
+
         .bar {
             height: 15px;
             width: 200px; /* Fixed width for bars */
