--- a/index6.html
+++ b/index6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Data Display</title>
     <style>
-        body {
+                    body {
                 background-color: #9E9C9B; /* Set the desired background color */
                 font-family: Arial, sans-serif; /* Set font to Arial with a fallback to sans-serif */
                 display: flex;
@@ -22,6 +22,8 @@
                 background-color: #ffffff; /* White background for container */
                 border-radius: 10px; /* Add border radius for rounded corners */
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow effect */
+                display: flex;
+                justify-content: left; /* Justify contents to the left */
             }
 
         .bar {
