--- a/index6.html
+++ b/index6.html
@@ -13,7 +13,7 @@
         .bar {
             height: 15px;
             width: 200px; /* Fixed width for bars */
-            margin: 3px 0;
+            margin: 2px 0;
             border-radius: 5px;
             transition: width 0.5s ease;
             /*display: inline-block;  Ensure bars are displayed inline */
@@ -98,9 +98,9 @@
         }
         .vertical-line {
             position: absolute;
-            width: 3px;
+            width: 5px;
             height: 100%;
-            background-color: black;
+            background-color: white;
             left: calc((var(--percentage) / 100) * 100% - 1.5px);
             top: 0;
         }
