--- a/index6.html
+++ b/index6.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Data Display</title>
     <style>
-        body {
-            background-color: #9E9C9B; /* Set the desired background color */
-            font-family: Arial, sans-serif; /* Set font to Arial with a fallback to sans-serif */
-        }
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+                background-color: #9E9C9B; /* Or any color you prefer */
+            }
+            
+            .content-container {
+                width: auto; /* Adjust based on your content */
+                margin: 0 20px; /* Add some space on the sides */
+            }
+
 
         .bar {
             height: 15px;
@@ -267,21 +277,20 @@
     </script>
 </head>
 <body>
-    <p>Technician Time Gauge<br>
-    Previous Week - This is still a work in progress</p>
-    <table id="dataTable" border="1" size=".5"></table>
-    <p>Red = 19 hours or less - Orange = 27 hours or less<br>
-    Gold = 32 hours or less - Green = more than 33 hours</p>
-    <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
-    <!-- Insert the HTML for the average percentage gauge here -->
-    <p>Average Shop Performance:</p>
-    <div id="averageGaugeContainer">
-        <div id="averageGauge" class="bar new-gauge">
-            <div id="averagePercentageDisplay" class="percentage"></div> <!-- Display average percentage here -->
-            <!-- <div class="indicator"></div> -->
+    <body>
+    <div class="content-container">
+        <p>Technician Time Gauge<br>Previous Week - This is still a work in progress</p>
+        <table id="dataTable" border="1" size=".5"></table>
+        <p>Red = 19 hours or less - Orange = 27 hours or less<br>Gold = 32 hours or less - Green = more than 33 hours</p>
+        <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
+        <p>Average Shop Performance:</p>
+        <div id="averageGaugeContainer">
+            <div id="averageGauge" class="bar new-gauge"></div>
+            <div id="averagePercentageDisplay" class="percentage"></div>
         </div>
-        
     </div>
+</body>
+
 </body>
 </html>
 
